--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
-version: "3.13"
-
 services:
-  web:
+  trivia:
     build: .
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./app:/app
+    container_name: trivia_app
+    command: python -m pytest
