github/workflows/ci.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,41 @@
+version: "3.9"
+
 services:
+  db:
+    image: postgres:15
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: trivia_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  web:
+    build: .
+    container_name: fast_app
+    command: python main.py
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: trivia_db
+    volumes:
+      - .:/app
+
   trivia:
     build: .
     container_name: trivia_app
     command: python -m pytest
+    depends_on:
+      - db
+    volumes:
+      - .:/app
+
+volumes:
+  postgres_data:
